google colab notebook stuff, font size in cells

--- a/Simulator.ipynb
+++ b/Simulator.ipynb
@@ -12,26 +12,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "dirty-course",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Install Sympy package\n",
+    "#@title Install and Load Packages\n",
     "\n",
     "#@markdown Please execute this cell by pressing the _Play_ button \n",
-    "#@markdown on the left to download and import the sympy package \n",
+    "#@markdown on the left to download and import the required packages \n",
     "#@markdown in this Colab notebook.\n",
     "\n",
-    "#@markdown **Note**: This installs the sympy on the Colab \n",
+    "#@markdown **Note**: This installs the sympy package on the Colab \n",
     "#@markdown notebook in the cloud and not on your computer.\n",
     "\n",
-    "import sys\n",
+    "try:\n",
+    "    import google.colab\n",
+    "    IN_COLAB = True\n",
+    "except ImportError:\n",
+    "    IN_COLAB = False\n",
     "\n",
     "try:\n",
     "    import sympy\n",
     "except ImportError:\n",
-    "    !pip install sympy\n",
+    "    %shell pip install sympy\n",
     "\n",
     "from sympy import symbols, Symbol\n",
     "from IPython.display import display, Math\n",
@@ -39,9 +43,39 @@
     "try:\n",
     "    import kin_model\n",
     "except ImportError:\n",
-    "    !wget \"\"\n",
+    "    %shell wget \"https://raw.githubusercontent.com/dmadea/Photo-Kinetic-Simulator/main/kin_model.py\"\n",
     "\n",
     "from kin_model import PhotoKineticSymbolicModel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "11cbc6f3-c42c-4cac-b2ee-6bfcdb4dd020",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@markdown Set the fontsize of the text in output cells,\n",
+    "#@markdown default value is 18px.\n",
+    "\n",
+    "font_size =  18 #@param {type:\"integer\"}\n",
+    "\n",
+    "# from https://stackoverflow.com/questions/61957742/how-to-increase-font-size-of-google-colab-cell-output\n",
+    "def increase_font():\n",
+    "    from IPython.display import Javascript\n",
+    "    display(Javascript(f'''\n",
+    "    for (rule of document.styleSheets[0].cssRules){{\n",
+    "        if (rule.selectorText=='body') {{\n",
+    "            rule.style.fontSize = '{font_size}px'\n",
+    "            break\n",
+    "        }}\n",
+    "    }}'''))\n",
+    "\n",
+    "if IN_COLAB:\n",
+    "    # set it to run in every cell\n",
+    "    get_ipython().events.register('pre_run_cell', increase_font)\n",
+    "    # disable\n",
+    "    # get_ipython().events.unregister('pre_run_cell', increase_font)"
    ]
   },
   {
@@ -56,98 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "final-romantic",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\mathrm{BR} \\xrightarrow{h\\nu} \\mathrm{^1BR}$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Math object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\mathrm{^1BR} \\xrightarrow{k_S} \\mathrm{BR}$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Math object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\mathrm{^1BR} \\xrightarrow{k_{isc}} \\mathrm{^3BR}$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Math object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\mathrm{^3BR} \\xrightarrow{k_T} \\mathrm{BR}$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Math object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\mathrm{^3BR} + \\mathrm{^3O_2} \\xrightarrow{k_{TT}} \\mathrm{^1O_2} + \\mathrm{BR}$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Math object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\mathrm{^1O_2} \\xrightarrow{k_d} \\mathrm{^3O_2}$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Math object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\mathrm{^1O_2} + \\mathrm{BR} \\xrightarrow{k_q} \\mathrm{BR} + \\mathrm{^3O_2}$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Math object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\mathrm{BR} + \\mathrm{^1O_2} \\xrightarrow{k_r} $"
+       "$\\displaystyle \\begin{align}\\mathrm{BR} &\\xrightarrow{h\\nu} \\mathrm{^1BR} \\\\\\mathrm{^1BR} &\\xrightarrow{k_S} \\mathrm{BR} \\\\\\mathrm{^1BR} &\\xrightarrow{k_{isc}} \\mathrm{^3BR} \\\\\\mathrm{^3BR} &\\xrightarrow{k_T} \\mathrm{BR} \\\\\\mathrm{^3BR} + \\mathrm{^3O_2} &\\xrightarrow{k_{TT}} \\mathrm{^1O_2} + \\mathrm{BR} \\\\\\mathrm{^1O_2} &\\xrightarrow{k_d} \\mathrm{^3O_2} \\\\\\mathrm{^1O_2} + \\mathrm{BR} &\\xrightarrow{k_q} \\mathrm{BR} + \\mathrm{^3O_2} \\\\\\mathrm{BR} + \\mathrm{^1O_2} &\\xrightarrow{k_r}  \\\\\\end{align}$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -158,7 +108,7 @@
     }
    ],
    "source": [
-    "str_model = \"\"\"\n",
+    "text_model = \"\"\"\n",
     "BR -hv-> ^1BR --> BR          // k_S  # population of singlet state and decay to GS with rate k_S\n",
     "^1BR --> ^3BR --> BR          // k_{isc} ; k_T\n",
     "^3BR + ^3O_2 --> ^1O_2 + BR   // k_{TT}\n",
@@ -167,13 +117,13 @@
     "BR + ^1O_2 -->                // k_r\n",
     "\"\"\"\n",
     "\n",
-    "model = PhotoKineticSymbolicModel.from_text(str_model)\n",
-    "model.pprint_model_no_env()\n"
+    "model = PhotoKineticSymbolicModel.from_text(text_model)\n",
+    "model.print_model()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "30016980-2529-481e-9da6-f25133b6ad19",
    "metadata": {},
    "outputs": [
@@ -325,6 +275,40 @@
     "subs = [(k_isc / (k_isc + k_S), phi_isc)]\n",
     "\n",
     "model.steady_state_approx(['^1BR', '^3BR', '^1O_2'], subs)  # set the species for SS approximation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "cf5d659f-2ea6-4924-9f7f-4821d56b0bcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-9"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sympy import lambdify\n",
+    "\n",
+    "J = model.symbols['flux']\n",
+    "k_S, k_isc, k_T, k_TT, k_d, k_q, k_r = model.symbols['rate_constants']\n",
+    "_, c, *_ = model.symbols['compartments']\n",
+    "\n",
+    "\n",
+    "f = lambdify([J, k_S, k_isc, c], model.symbols['equations'][1].rhs, 'numpy')\n",
+    "\n",
+    "\n",
+    "\n",
+    "# model.symbols['equations'][1].rhs\n",
+    "\n",
+    "f(1, 1, 1, 5)"
    ]
   },
   {
