--- a/Simulator.ipynb
+++ b/Simulator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eeedbda2-cc99-42ad-a099-7e4f908ee96a",
+   "id": "wooden-syndication",
    "metadata": {},
    "source": [
     "## Photokinetic simulator\n",
@@ -13,11 +13,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dirty-course",
+   "id": "available-separation",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Install and Load Packages\n",
+    "#@title Install and Load Packages { display-mode: \"form\" }\n",
     "\n",
     "#@markdown Please execute this cell by pressing the _Play_ button \n",
     "#@markdown on the left to download and import the required packages \n",
@@ -51,10 +51,12 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "11cbc6f3-c42c-4cac-b2ee-6bfcdb4dd020",
+   "id": "acknowledged-tuition",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#@title Fontsize of the output cells { run: \"auto\" }\n",
+    "\n",
     "#@markdown Set the fontsize of the text in output cells,\n",
     "#@markdown default value is 18px.\n",
     "\n",
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c762bd6-58c4-4947-bd3d-dcacf0f78481",
+   "id": "phantom-reach",
    "metadata": {},
    "source": [
     "### Input the text model\n",
@@ -91,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "final-romantic",
+   "id": "vocational-reproduction",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "30016980-2529-481e-9da6-f25133b6ad19",
+   "id": "bound-therapist",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "cf5d659f-2ea6-4924-9f7f-4821d56b0bcf",
+   "id": "worthy-minority",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1a57e110-fd49-409a-bdc0-10a56a14de1d",
+   "id": "addressed-characteristic",
    "metadata": {},
    "outputs": [
     {
@@ -420,14 +422,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "driven-helping",
+   "id": "ultimate-castle",
    "metadata": {},
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -441,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
