--- a/Simulator.ipynb
+++ b/Simulator.ipynb
@@ -40,7 +40,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "available-separation"
+        "id": "available-separation",
+        "outputId": "d3638608-1ee1-4a42-f636-0e901141a547",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "#@title Install and Load Packages { display-mode: \"form\" }\n",
@@ -69,13 +73,31 @@
         "try:\n",
         "    import kin_model\n",
         "except ImportError:\n",
-        "    %shell wget \"https://raw.githubusercontent.com/dmadea/Photo-Kinetic-Simulator/main/kin_model.py\"\n",
+        "    %shell wget -q \"https://raw.githubusercontent.com/dmadea/Photo-Kinetic-Simulator/main/kin_model.py\"\n",
         "\n",
         "from kin_model import PhotoKineticSymbolicModel"
       ],
       "id": "available-separation",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2021-11-30 20:37:37--  https://raw.githubusercontent.com/dmadea/Photo-Kinetic-Simulator/main/kin_model.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 14415 (14K) [text/plain]\n",
+            "Saving to: ‘kin_model.py’\n",
+            "\n",
+            "\rkin_model.py          0%[                    ]       0  --.-KB/s               \rkin_model.py        100%[===================>]  14.08K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2021-11-30 20:37:38 (66.3 MB/s) - ‘kin_model.py’ saved [14415/14415]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
