--- a/Simulator.ipynb
+++ b/Simulator.ipynb
@@ -43,12 +43,54 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 37,
       "id": "available-separation",
       "metadata": {
-        "id": "available-separation"
+        "id": "available-separation",
+        "outputId": "ef53bd5d-fa9f-4e3c-f242-4523c217dac3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "    for (rule of document.styleSheets[0].cssRules){\n",
+              "        if (rule.selectorText=='body') {\n",
+              "            rule.style.fontSize = '18px'\n",
+              "            break\n",
+              "        }\n",
+              "    }"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "    for (rule of document.styleSheets[0].cssRules){\n",
+              "        if (rule.selectorText=='body') {\n",
+              "            rule.style.fontSize = '18px'\n",
+              "            break\n",
+              "        }\n",
+              "    }"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
         "#@title Install and Load Packages { display-mode: \"form\" }\n",
         "\n",
@@ -85,14 +127,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 38,
       "id": "acknowledged-tuition",
       "metadata": {
-        "id": "acknowledged-tuition"
+        "id": "acknowledged-tuition",
+        "outputId": "2409d517-9778-4de9-d71d-115d039e161f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "    for (rule of document.styleSheets[0].cssRules){\n",
+              "        if (rule.selectorText=='body') {\n",
+              "            rule.style.fontSize = '18px'\n",
+              "            break\n",
+              "        }\n",
+              "    }"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "    for (rule of document.styleSheets[0].cssRules){\n",
+              "        if (rule.selectorText=='body') {\n",
+              "            rule.style.fontSize = '18px'\n",
+              "            break\n",
+              "        }\n",
+              "    }"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
-        "#@title Fontsize of the Output Cells { display-mode: \"form\", run: \"auto\" }\n",
+        "#@title Fontsize of the Output Cells and Figures { display-mode: \"form\", run: \"auto\" }\n",
         "\n",
         "#@markdown Set the fontsize of the text in output cells and graphs,\n",
         "#@markdown default value is 18px and 14, respectively. \n",
@@ -142,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "a7ce3c03",
       "metadata": {
         "id": "a7ce3c03",
@@ -256,7 +340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "cf2426db",
       "metadata": {
         "id": "cf2426db",
@@ -331,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "ef269040",
       "metadata": {
         "id": "ef269040",
@@ -477,7 +561,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "8785818e",
       "metadata": {
         "id": "8785818e",
@@ -1565,7 +1649,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "id": "addressed-characteristic",
       "metadata": {
         "id": "addressed-characteristic",
@@ -1713,7 +1797,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "id": "e79850d5",
       "metadata": {
         "id": "e79850d5",
