--- a/Simulator.ipynb
+++ b/Simulator.ipynb
@@ -934,7 +934,7 @@
       "source": [
         "### Transient Kinetics of Rose Bengal\n",
         "\n",
-        "In the following example, the transient kinetics of Rose Bengal under degassed conditions will be simulated. The kinetic model is based on our [publication](https://pubs.rsc.org/en/content/articlelanding/2016/cp/c6cp01710j#!divAbstract). The rate data for MeCN were used. Because the singlet state lifetime is much shorter that those of a triplet and radical pairs, we will make a steady state approximation for the singlet state. We need to include the singlet state to the model due to its formation by triplet-triplet annihilation process of two triplets."
+        "In the following example, the transient kinetics of Rose Bengal under degassed conditions will be simulated. The kinetic model is based on our [publication](https://pubs.rsc.org/en/content/articlelanding/2016/cp/c6cp01710j#!divAbstract). The rate data for MeCN were used. Because the singlet state lifetime is much shorter that those of a triplet and radical pairs, we will make a steady state approximation for the singlet state. We need to include the singlet state to the model due to its formation by triplet-triplet annihilation process."
       ]
     },
     {
@@ -1207,11 +1207,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 9,
       "id": "cc7a41ef",
       "metadata": {
         "id": "cc7a41ef",
-        "outputId": "a2edc019-1658-478c-d18b-f6f95082459b",
+        "outputId": "81c606f5-13dc-4caa-ecc6-8b2c95921634",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
