substitutions, unit conversion

--- a/Simulator.ipynb
+++ b/Simulator.ipynb
@@ -130,11 +130,93 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
+      "id": "e37e9cc6",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([1.e+15, 1.e+12, 1.e+09, 1.e+06, 1.e+03, 1.e+00, 1.e-03, 1.e-06,\n",
+              "       1.e-09])"
+            ]
+          },
+          "execution_count": 66,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# f, n, p, u, m, _, k, M, G = np.logspace(-15, 9, 9)\n",
+        "# f, n, p, u, m, k, M, G\n",
+        "# np.logspace(-15, -3, 5)\n",
+        "\n",
+        "\n",
+        "10 ** -np.floor(np.log10(np.logspace(-15, 9, 9)))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 160,
       "id": "7bf6f2ea",
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'1 s'"
+            ]
+          },
+          "execution_count": 160,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "nums = np.logspace(-10, 10, 25)\n",
+        "\n",
+        "\n",
+        "[f'{n:#.3g}' for n in nums]\n",
+        "\n",
+        "def format_time_latex(number: float, sig_figures: int = 3):\n",
+        "    tol = 1-10**(-sig_figures) + 5 * 10 ** (-sig_figures - 1)\n",
+        "    f, p, n, u, m = np.logspace(-15, -3, 5) * tol\n",
+        "\n",
+        "    unit = 's'\n",
+        "    if f <= number < p:\n",
+        "        number /=  f\n",
+        "        unit =  'fs'\n",
+        "    elif p <= number < n:\n",
+        "        number /=  p\n",
+        "        unit =  'ps'\n",
+        "    elif n <= number < u:\n",
+        "        number /=  n\n",
+        "        unit =  'ns'\n",
+        "    elif u <= number < m:\n",
+        "        number /=  u\n",
+        "        unit =  '\\\\mu s'\n",
+        "    elif m <= number < tol:\n",
+        "        number /=  m\n",
+        "        unit =  'ms'\n",
+        "    elif tol * 60 <= number < tol * 3600:\n",
+        "        number /=  60\n",
+        "        unit =  'min'\n",
+        "    elif tol * number >= 3600:\n",
+        "        number /=  3600\n",
+        "        unit =  'h'\n",
+        "    \n",
+        "    str_num = f'{number:.{sig_figures}g}'\n",
+        "\n",
+        "    if 'e' in str_num:\n",
+        "        exp = int(np.floor(np.log10(number)))\n",
+        "        number *= 10 ** -exp\n",
+        "        return f'{number:.{sig_figures}g} \\\\times 10^{{{exp}}} {unit}'\n",
+        "\n",
+        "    return f'{str_num} {unit}'\n",
+        "\n",
+        "format_time_latex(0.999999)\n",
+        "# f'{0.9995:.3g}'"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1423,7 +1505,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.7"
+      "version": "3.9.7"
     }
   },
   "nbformat": 4,
