--- a/Simulator.ipynb
+++ b/Simulator.ipynb
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 17,
       "id": "available-separation",
       "metadata": {
         "colab": {
@@ -103,7 +103,7 @@
         "    %shell pip install sympy\n",
         "\n",
         "from sympy import symbols, Symbol, print_latex, Eq\n",
-        "from IPython.display import display, Math\n",
+        "from IPython.display import display, Math, Markdown, Latex\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "\n",
@@ -117,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 18,
       "id": "acknowledged-tuition",
       "metadata": {
         "colab": {
@@ -167,6 +167,14 @@
     },
     {
       "cell_type": "markdown",
+      "id": "fcd22737",
+      "metadata": {},
+      "source": [
+        "$$\\begin{align} \\mathrm{A} &\\xrightarrow{k_{AB}} \\mathrm{B} \\ \\mathrm{B} &\\xrightarrow{k_{BC}} \\mathrm{C} \\ \\mathrm{C} &\\xrightarrow{k_{CD}} \\mathrm{D} \\ \\end{align}$$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "phantom-reach",
       "metadata": {
         "id": "phantom-reach"
@@ -179,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "id": "a7ce3c03",
       "metadata": {
         "colab": {
@@ -190,18 +198,6 @@
         "outputId": "3d419a64-236d-46bf-dcdc-43f1aefbe10e"
       },
       "outputs": [
-        {
-          "data": {
-            "text/markdown": [
-              "$$\\begin{align} \\mathrm{A} &\\xrightarrow{k_{AB}} \\mathrm{B} \\\\\\mathrm{B} &\\xrightarrow{k_{BC}} \\mathrm{C} \\\\\\mathrm{C} &\\xrightarrow{k_{CD}} \\mathrm{D} \\\\ \\end{align}$$"
-            ],
-            "text/plain": [
-              "<IPython.core.display.Markdown object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
         {
           "data": {
             "text/latex": [
@@ -259,8 +255,63 @@
         "\n",
         "# instantiate the model\n",
         "model = PhotoKineticSymbolicModel.from_text(text_model)\n",
-        "model.print_model()  # print the model\n",
+        "le = model.print_model()  # print the model\n",
         "model.pprint_equations()  # print the ODEs"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "id": "ac7bbfaa",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "$$\\begin{align} \\mathrm{A} &\\xrightarrow{k_{AB}} \\mathrm{B}\\\\\n",
+            "\\mathrm{B} &\\xrightarrow{k_{BC}} \\mathrm{C}\\\\\n",
+            "\\mathrm{C} &\\xrightarrow{k_{CD}} \\mathrm{D} \\end{align}$$\n"
+          ]
+        },
+        {
+          "data": {
+            "text/latex": [
+              "\n",
+              "\\begin{align} \\mathrm{A} &\\xrightleftharpoons[5]{k_{AB}} \\mathrm{B}\\\\\n",
+              "\\mathrm{B} &\\xrightarrow{k_{BC}} \\mathrm{C}\\\\\n",
+              "\\mathrm{C} &\\xrightarrow{k_{CD}} \\mathrm{D} \\end{align}\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "print(le)\n",
+        "\n",
+        "eq = r\"\"\"\n",
+        "\\begin{align} \\mathrm{A} &\\xrightleftharpoons[5]{k_{AB}} \\mathrm{B}\\\\\n",
+        "\\mathrm{B} &\\xrightarrow{k_{BC}} \\mathrm{C}\\\\\n",
+        "\\mathrm{C} &\\xrightarrow{k_{CD}} \\mathrm{D} \\end{align}\n",
+        "\"\"\"\n",
+        "\n",
+        "display(Latex(eq))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "cf24fab6",
+      "metadata": {},
+      "source": [
+        "\\begin{align*} \n",
+        "\\mathrm{A} &\\xrightarrow{k_{AB}} \\mathrm{B}\\\\\n",
+        "\\mathrm{B} &\\xrightarrow{k_{BC}} \\mathrm{C}\\\\\n",
+        "\\mathrm{C} &\\xrightarrow{k_{CD}} \\mathrm{D} \n",
+        "\\end{align*}"
       ]
     },
     {
@@ -1317,7 +1368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 4,
       "id": "a6ca68cb",
       "metadata": {},
       "outputs": [
@@ -1573,7 +1624,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.7"
+      "version": "3.9.7"
     }
   },
   "nbformat": 4,
