\xrightleftharpoons rewritten with overset and underset

--- a/Simulator.ipynb
+++ b/Simulator.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "absolute-steel",
    "metadata": {
     "colab": {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "broke-philadelphia",
    "metadata": {
     "colab": {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "integral-admission",
    "metadata": {
     "colab": {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "honey-malta",
    "metadata": {
     "colab": {
@@ -1377,14 +1377,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "gothic-spanish",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "$$\\begin{align*} \\mathrm{OrCat} + \\mathrm{Oct} &\\xrightleftharpoons[k_{-1}]{\\hspace{0.1cm}k_1}\\hspace{0.1cm} \\mathrm{H_2O} + \\mathrm{Ena}\\\\\n",
+       "$$\\begin{align*} \\mathrm{OrCat} + \\mathrm{Oct}\\ &\\overset{k_1}{\\underset{k_{-1}}\\rightleftharpoons}\\ \\mathrm{H_2O} + \\mathrm{Ena}\\\\\n",
        "\\mathrm{Ru} &\\xrightarrow{h\\nu} \\mathrm{RuT}\\\\\n",
        "\\mathrm{RuT} &\\xrightarrow{k_2} \\mathrm{Ru}\\\\\n",
        "\\mathrm{RuT} + \\mathrm{Ena} &\\xrightarrow{k_3} \\mathrm{RuC}\\\\\n",
@@ -1392,7 +1392,7 @@
        "\\mathrm{Ena} + \\mathrm{Mal\\bullet} &\\xrightarrow{k_5} \\mathrm{Ami\\bullet}\\\\\n",
        "\\mathrm{Ami\\bullet} + \\mathrm{BrMal} &\\xrightarrow{k_6} \\mathrm{Imin} + \\mathrm{Mal\\bullet}\\\\\n",
        "\\mathrm{Ami\\bullet} + \\mathrm{RuT} &\\xrightarrow{k_7} \\mathrm{Imin} + \\mathrm{RuC}\\\\\n",
-       "\\mathrm{Imin} + \\mathrm{H_2O} &\\xrightleftharpoons[k_{-8}]{\\hspace{0.1cm}k_8}\\hspace{0.1cm} \\mathrm{DOM} + \\mathrm{OrCat}\\\\\n",
+       "\\mathrm{Imin} + \\mathrm{H_2O}\\ &\\overset{k_8}{\\underset{k_{-8}}\\rightleftharpoons}\\ \\mathrm{DOM} + \\mathrm{OrCat}\\\\\n",
        "\\mathrm{Mal\\bullet} &\\xrightarrow{k_9}  \\end{align*}$$"
       ],
       "text/plain": [
@@ -1577,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "broke-newton",
    "metadata": {},
    "outputs": [
